--- a/project/project.Rmd
+++ b/project/project.Rmd
@@ -429,11 +429,9 @@ ui <- fluidPage(
 
 server <- function(input, output) {
   output$bar_graph <- renderPlot({
-    ggplot(mapping = aes(x = input$category, y = count(input$category)) +
-      geom_bar(position = "dodge", stat="identity") + theme_minimal() + 
+    ggplot(data = h2b, mapping = aes_string(x = input$category)) +
+      geom_bar() + theme_minimal() + 
       labs( x=input$category, y="count")
-    
-      )
   })
 }
 
