got rid of prevailing wage

--- a/project/project.Rmd
+++ b/project/project.Rmd
@@ -411,8 +411,7 @@ ui <- fluidPage(
                               "Region" = "region",
                               "Submitted Season" = "submitted_season",
                               "Decision Season" = "decision_season",
-                              "Start Season" = "start_season", 
-                              "Difference in Prevailing and Basic Wage" = "wage_diff"),
+                              "Start Season" = "start_season"),
                   selected = "Case Status"),
       selectInput(inputId = "fill", label = "Fill By",
                   choices = c("Region" = "region",
