--- a/project/project.Rmd
+++ b/project/project.Rmd
@@ -522,7 +522,7 @@ Another interesting observation is that most workers appear to be working in the
 If we had more time, we would also include logistic regression to analyze the likelihood of an individual application being approved. This would allow us to set the dependent variable as a categorical one. We would also look at policies that relate to H2-B visas to find if there are any institutional reasons one visa application is more likely to be approved. 
 
 
-In terms of our dataset, there could be several things pertaining to pertaining to the reliability and validity of our conclusions. As is the case in most large datasets, we had some NA values that we had to deal with. Since we combined data from several years, different years would sometimes have different columns, so we would get a lot of NA's as a result. We made do with what we had, but missing years of data could mean that changes from year to year were not represented as well. Another hurdle that we had to overcome with our data was the different wage units. Wages were mostly reported as hourly wages, but in some cases they were reported as monthly or yearly wages instead. Since there was no column reporting how many hours each worker worked, there was no way for us to standardize this data. Alas, when examining differences in wages, we chose to mainly foucs on the hourly data since that is what we had the most of to work with. Lastly we had some trouble working with the dates because they were not written in the same format each year. For example, some dates were written as 1/27/08 and others were written as 1-Jan-08. We eventually found a way to make things work, but it took us a while to get things correct. 
+In terms of our dataset, there could be several things pertaining to the reliability and validity of our conclusions. As is the case in most large datasets, we had some NA values that we had to deal with. Since we combined data from several years, different years would sometimes have different columns, so we would get a lot of NA's as a result. We made do with what we had, but missing years of data could mean that changes from year to year were not represented as well. Another hurdle that we had to overcome with our data was the different wage units. Wages were mostly reported as hourly wages, but in some cases they were reported as monthly or yearly wages instead. Since there was no column reporting how many hours each worker worked, there was no way for us to standardize this data. Alas, when examining differences in wages, we chose to mainly foucs on the hourly data since that is what we had the most of to work with. Lastly we had some trouble working with the dates because they were not written in the same format each year. For example, some dates were written as 1/27/08 and others were written as 1-Jan-08. We eventually found a way to make things work, but it took us a while to get things correct. 
 
 
 
